--- a/6_25_sigma.Rmd
+++ b/6_25_sigma.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "6 sigma, 25 sigma (importance sampling ftw)"
+title: "6 sigma, 25 sigma"
 date: "10/2/2020"
 output: html_document
 ---
@@ -7,25 +7,34 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-Aug 2014:
-"HY flowmageddon," said Goldman Sachs' Charles Himmelberg "...largest HY outflow on record – a **6-sigma** event!"
+Charles Himmelberg, Goldman Sachs, Aug 2014: "...largest HY outflow on record – a **6-sigma** event!"
 
-(High-yield bond mutual funds saw outflows total $7.1 billion)
+David Viniar,CFO/Goldman Sachs,Aug 2007: “...seeing  things  that are **25-sigma** moves"
 
-Aug 2007:
-“We  were  seeing  things  that  were  **25-sigma** moves", said David Viniar, CFO of Goldman Sachs.
+Here's a six sigma event:
+```{r}
+x = seq(6,7,0.01)
+y = dnorm(x)
+x2 = seq(-3,7,0.01)
+y2 = dnorm(x2)
+par(mfrow=c(1,2))
+plot(x2,y2,xlim=c(-3,8),ylim=c(1e-11,0.5),col='black', type='l', xlab="Look at the red line between [6,7]")
+lines(x2[x2>6],y2[x2>6],xlim=c(6,8),ylim=c(1e-11,0.5),col='red', type='l')
+plot(x,y,xlim=c(6,7),ylim=c(1e-11,1e-8),col='red', type='l', xlab = "This is the same red line!")
+polygon(c(x[x>=6], max(x), 6), c(y[x>=6], 0, 0), col="red")
 
-(Goldman’s flagship GEO  hedge  fund  lost  a quarter of  its  value ytd)
+```
 
-How does one estimate the probability of such a 6-sigma event ?
-The average programmer, thinking back to leetcode on Dice & suchlike, reasons "think of the Gaussian as some special dice with thousands of faces. Toss the dice a million times. Count how many times you see a 6 or more. The fraction of counts is your probability."
+How does your average programmer find the probability of a 6-sigma event ? 
+
+**Naive Algo 1** "Toss a Gaussian dice million times. Count if the dice shows six or more. The fraction of counts is your probability."
 ```{r}
 million=1000*1000
 dice = rnorm(million)
 count = sum(dice[dice > 6])
 cat(sprintf("Probability of 1-tailed 6 sigma event: %f", count/million))
 ```
-So this doesn't get us anywhere!!!
+Heh heh! That got us nowhere!!!
 
 Now, sampling per-se is not an unsound strategy.
 
@@ -44,22 +53,20 @@ So how else could you estimate the probability of a rare event if sampling fails
 
 A probability is an integral of the density function over the appropriate range.
 
-We can numerically integrate the Gaussian density function from 6 to infinity.
+**Algo 2. Numerical Integration** Integrate the Gaussian density function from 6 to infinity.
 ```{r}
 # Use Numeric Integration
 integrate(function(x) { exp(-x^2/2)/sqrt(2*pi)} , 6, Inf)
 ```
 
-Ofcourse, this integral from -infinity to some x is called the CDF(Cumulative Distribution Function) of x.
+Ofcourse, this definite integral (from -infinity to some x) is also called the CDF(Cumulative Distribution Function) of x.
 
-In most **civilized** PLs, these things are built-in (called pnorm in R)
-
-We care about the right tail (6 to Inf, not -Inf to 6) so a subtraction yields:
+**Algo 3 ** Use the CDF.
 ```{r}
 # Use the CDF
 1 - pnorm(6) 
 ```
-The desired probability of the 6-sigma event, as we've confirmed twice now, is 9.9e-10....very,very small.
+The desired probability of the 6-sigma event, as we've confirmed twice now, is **9.9e-10**....very,very small.
 
 But say you don't have access to CDFs & integrals. 
 
@@ -67,7 +74,7 @@ All you have are samples.
 
 What then ?
 
-Well, you could sample from *some other* distribution!
+Well, sample from *some other* distribution!
 
 Consider proposal distribution q = N(6,1) ie. Gaussian centered at 6.
 
@@ -84,11 +91,13 @@ p = density of N(0,1) = exp(-x^2/2)/sqrt(2*pi)
 q = density of N(6,1) = exp(-(x-6)^2/2)/sqrt(2*pi)
 
 => p/q = exp((36-12x)/2)
+
+**Algo 4** Importance Sampling from Gaussian proposal, some Algebra
 ```{r}
 # 1 line Importance Sampling, with Gaussian proposal
 mean(sapply(rnorm(100000,6,1), function(x) { ifelse(x>6, exp((36-12*x)/2),0) }))
 ```
-Once again, we obtain 9.9e-10.
+Once again, we obtain **9.9e-10**.
 
 This technique - finding expectation via change of measure, is what mathematicians term **change of measure** (duh).
 
@@ -103,6 +112,8 @@ Most times, you don't know these things.
 No worries!
 
 Densities are built-in as well (called dnorm in R)
+
+**Algo 5** Importance Sampling from Gaussian proposal, no Algebra
 ```{r}
 # Since densities are built into the dnorm function, p/q = dnorm(...)/dnorm(...)
 # This is super-useful if you are uncomfortable with algebra. 
@@ -117,6 +128,8 @@ After all, every PL has a uniform distribution (its the rand() function)
 Consider proposal distribution of Uniform, centered at 6 with width 20, ie. U[-4,16]
 
 p/q = 20*exp(-x^2/2)/sqrt(2*pi)
+
+**Algo 6** I hate Gaussians! Importance Sampling from Uniform distribution, U[-4,16]
 ```{r}
 # 1 line Importance Sampling, with Uniform proposal
 mean(sapply(runif(100000,-4,16), function(x) { ifelse(x>6, 20*exp(-x^2/2)/sqrt(2*pi),0) }))
@@ -130,6 +143,8 @@ So why produce them in the first place ?
 Simply start the distribution at 6 & explore the right tail.
 
 Say the proposal q = U[6,16] Density is 1/10. So p/q = 10*p = 10*dnorm
+
+**Algo 7** Importance Sampling from Uniform distribution over right tail, U[6,16]
 ```{r}
 10*mean(sapply(runif(100000,6,16), dnorm))
 ```
@@ -142,6 +157,8 @@ When the quants at Goldman talk about the 6-sigma & 25-sigma events, they refer 
 Let's pick a typical fat-tailed candidate with finite moments, say a central T with 3 degrees of freedom.
 
 A central T with df 3 has variance 3, so 1 sigma is sqrt(3). A 6 sigma is 10.4
+
+**Algo 8** Six Sigma on Student T(3): Importance Sampling from U[10.4,20.4]
 ```{r}
 # 6 sigma via CDF
 cat(sprintf("Probability of 6-sigma event on Student-T(df=3) via CDF: %f\n", 1-pt(10.4, df=3)))
@@ -155,6 +172,8 @@ Notice how importance sampling underestimates the true probability.
 We used a candidate proposal distribution of U[10.4, 20.4], but the t-distribution has really fat tails, significant mass well beyond 20.4! 
 
 So let's extend the range ten times, i.e. try U[10.4, 110.4]
+
+**Algo 9** Six Sigma on Student T(3): Importance Sampling from U[10.4,110.4]
 ```{r}
 # 6 sigma via Importance Sampling from U[10.4,110.4]
 cat(sprintf("Probability of 6-sigma event on Student-T(df=3) via Importance Sampling: %f\n", 
@@ -163,6 +182,8 @@ cat(sprintf("Probability of 6-sigma event on Student-T(df=3) via Importance Samp
 So the likelihood of 6-sigma events in real life is not that small, 0.000949 = 1 in 1053, quite high in fact!
 
 How about a 25-sigma event ?
+
+**Algo 10** 25 Sigma on Student T(3): Importance Sampling from U[43.3, 143.3]
 ```{r}
 # 25 sigma via CDF
 cat(sprintf("Probability of 25-sigma event on Student-T(df=3) via CDF: %f\n", 1-pt(43.3, df=3)))
@@ -171,6 +192,6 @@ cat(sprintf("Probability of 25-sigma event on Student-T(df=3) via CDF: %f\n", 1-
 cat(sprintf("Probability of 25-sigma event on Student-T(df=3) via Importance Sampling: %f\n", 
             100*mean(sapply(runif(100000,43.3,143.3), dt, df =3))))
 ```
-Twenty sigma events on a typical fat-tailed distribution have a one in a seventy thousand chance.
+25 sigma events on a typical fat-tailed distribution have a one in a seventy thousand chance.
 
-Takeaway: Knowing *what* to sample is way more important that knowing *how*.
+Takeaway: Rare events have a nonzero probability. Importance Sampling ftw!
